Замінив третій проект на новий

--- a/projects.html
+++ b/projects.html
@@ -69,8 +69,8 @@
                             <h3>Сайт Кафе</h3>
                             <p>Адаптивний лендінг з анімацією страв та формою бронювання.</p>
                             <div class="project-links">
-                                <a href="#" class="btn btn--sm">Live Demo</a>
-                                <a href="#" class="btn btn--outline btn--sm">GitHub</a>
+                                <a href="https://desikx.github.io/Caffe-Dio-s/" class="btn btn--sm">Live Demo</a>
+                                <a href="https://github.com/DesikX/Caffe-Dio-s" class="btn btn--outline btn--sm">GitHub</a>
                             </div>
                         </div>
                     </article>
@@ -91,8 +91,8 @@
                             <h3>Сайт вебінар</h3>
                             <p>Сайт про вебінар тревел фотографій та онлайн-навчання.</p>
                             <div class="project-links">
-                                <a href="#" class="btn btn--sm">Live Demo</a>
-                                <a href="#" class="btn btn--outline btn--sm">GitHub</a>
+                                <a href="https://desikx.github.io/Webinar-travel-photo/" class="btn btn--sm">Live Demo</a>
+                                <a href="https://github.com/DesikX/Webinar-travel-photo" class="btn btn--outline btn--sm">GitHub</a>
                             </div>
                         </div>
                     </article>
@@ -109,12 +109,13 @@
                             <div class="tags">
                                 <span class="tag">HTML</span>
                                 <span class="tag">CSS</span>
+                                <span class="tag">JS</span>
                             </div>
-                            <h3>Интернет магазин НФТ</h3>
-                            <p>Интернет магазин для покупки та продажу NFT-артів.</p>
+                            <h3>Интернет техники</h3>
+                            <p>DeTehno магазин для покупки техники.</p>
                             <div class="project-links">
-                                <a href="#" class="btn btn--sm">Live Demo</a>
-                                <a href="#" class="btn btn--outline btn--sm">GitHub</a>
+                                <a href="https://desikx.github.io/-----------------DeTehno/" class="btn btn--sm">Live Demo</a>
+                                <a href="https://github.com/DesikX/-----------------DeTehno" class="btn btn--outline btn--sm">GitHub</a>
                             </div>
                         </div>
                     </article>
