--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
                             </div>
                             <div class="skill-card__back">
                                 <ul>
-                                    <li>HTML5</li>
-                                    <li>CSS3 / SASS / Flex / Grid</li>
-                                    <li>JavaScript (ES6+)</li>
+                                    <li>HTML</li>
+                                    <li>CSS / SCSS / Flex / Grid</li>
+                                    <li>JavaScript</li>
                                 </ul>
                             </div>
                         </div>
@@ -113,7 +113,7 @@
                                 <ul>
                                     <li>VS Code</li>
                                     <li>Git & GitHub</li>
-                                    <li>Figma (Basic)</li>
+                                    <li>Figma</li>
                                     <li>Chrome DevTools</li>
                                 </ul>
                             </div>
